--- a/src/Views/home/index.css
+++ b/src/Views/home/index.css
@@ -1,26 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&family=Ubuntu:wght@300;400;500;700&display=swap');
 
-body {
+/* INDEX */
+.container {
   margin: 0;
   padding: 0;
   background: linear-gradient(90deg, rgba(231, 240, 242, 0.3) 60%, #ffffff 40%);
-}
-
-/* INDEX */
-.container {
   padding: 100px 150px 100px 180px;
 }
 
-/* SECTION 1*/
-.container .section1 {
+.main-page {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-.container .section1 .title {
+/* SECTION 1*/
+.main-page .section-one {
+}
+
+.main-page .section-one .title {
+  text-align: start;
   font-family: 'Montserrat', sans-serif;
   font-size: 90px;
 }
 
-.container .section1 .navigation {
+.main-page .section-one .navigation {
   float: right;
   font-family: 'Ubuntu', sans-serif;
   border-right: rgba(0, 0, 0, 0.1) solid 1px;
@@ -31,27 +35,29 @@ body {
   font-size: 18px;
 }
 
-.container .section1 .navigation div {
+.main-page .section-one .navigation div {
   cursor: pointer;
 }
 
-.container .section1 .navigation .top {
+.main-page .section-one .navigation .top {
   margin-bottom: 30px;
 }
 
 /* SECTION 2*/
-.container .section2 {
+.main-page .section-two {
   display: flex;
   flex-direction: row;
   margin-top: 100px;
   font-family: 'Ubuntu', sans-serif;
 }
 
-.container .section2 .left-side {
+.main-page .section-two .left-side {
   width: 40%;
+  display: flex;
+  align-items: flex-start;
 }
 
-.container .section2 .left-side .shop-now {
+.main-page .section-two .left-side .shop-now {
   background-color: #000;
   color: #fff;
   padding: 10px 25px;
@@ -61,25 +67,26 @@ body {
   cursor: pointer;
 }
 
-.container .section2 .right-side {
+.main-page .section-two .right-side {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   width: 60%;
   text-align: right;
+  margin-top: 0;
 }
 
-.container .section2 .right-side .jargon {
+.main-page .section-two .right-side .jargon {
   font-size: 50px;
   margin-bottom: 90px;
   font-weight: 300;
 }
 
-.container .section2 .right-side .jargon span {
+.main-page .section-two .right-side .jargon span {
   font-weight: 700;
 }
 
-.container .section2 .right-side .description {
+.main-page .section-two .right-side .description {
   width: 30%;
   font-size: 16px;
   font-weight: 500;
@@ -91,20 +98,20 @@ body {
 }
 
 /* SECTION 3 */
-.container .section3 {
-  float: right;
+.main-page .section-three {
+  align-self: flex-end;
   width: 70%;
   margin-top: 80px;
 }
 
-.container .section3 .pages {
+.main-page .section-three .pages {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: end;
   width: 100%;
 }
 
-.container .section3 .pages .page {
+.main-page .section-three .pages .page {
   position: relative;
   width: 300px;
   height: 180px;
@@ -113,7 +120,7 @@ body {
   cursor: pointer;
 }
 
-.container .section3 .pages .page .text {
+.main-page .section-three .pages .page .text {
   position: absolute;
   bottom: 20px;
   right: 25px;
@@ -121,13 +128,13 @@ body {
   text-align: end;
 }
 
-.container .section3 .pages .page .text .title {
+.main-page .section-three .pages .page .text .title {
   font-size: 14px;
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
 }
 
-.container .section3 .pages .page .text .subtitle {
+.main-page .section-three .pages .page .text .subtitle {
   font-size: 12px;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
