--- a/src/Views/shop/index.css
+++ b/src/Views/shop/index.css
@@ -3,11 +3,6 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(
-    270deg,
-    #ffffff 60%,
-    rgba(231, 240, 242, 0.3) 40%
-  );
 }
 
 input:focus,
@@ -15,161 +10,214 @@ select:focus {
   outline: none;
 }
 
-.cart {
-  position: absolute;
-  font-size: 25px;
-  right: 9%;
-  top: 7%;
-  cursor: pointer;
-}
-
 .container {
-  display: flex;
-  padding: 100px 120px 100px 150px;
-}
-
-/* LEFT SIDE */
-.container .left-side {
-  min-width: 50%;
-}
-
-.container .left-side .image {
-  position: relative;
-}
-
-.container .left-side .image img {
-  width: 100%;
-}
-
-.container .left-side .image .navigation {
-  position: absolute;
-  bottom: -5px;
-}
-
-.container .left-side .image .navigation .arrow-btn {
-  width: 60px;
-  height: 70px;
-  margin-right: 15px;
-  background-color: #000;
-  color: #fff;
-  font-size: 20px;
-  border: none;
-  cursor: pointer;
-}
-
-/* RIGHT SIDE */
-.container .right-side {
-  margin-top: 50px;
+  padding: 50px 150px;
   display: flex;
   flex-direction: column;
 }
 
-.container .right-side a {
-  align-self: flex-end;
-  width: 10%;
+/* TOP PART */
+.container .top-part {
+  display: flex;
+  align-items: center;
+}
+
+.container .top-part .shop-name {
+  width: 70%;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 300;
+  font-size: 50px;
+}
+
+.container .top-part .search {
+  position: relative;
+  width: 15%;
+  border-bottom: 1px solid #c4c4c4;
+  height: 40px;
+}
+
+.container .top-part .search input {
+  position: absolute;
+  top: 10px;
   font-family: 'Roboto', sans-serif;
+  min-width: 100%;
+  opacity: 0.2;
   font-weight: 900;
+  font-size: 14px;
+  text-align: center;
   text-transform: uppercase;
-  padding-right: 20px;
-  padding-bottom: 30px;
-  border-right: 2px solid #e7f0f2;
+  color: #000;
+  border: none;
+  width: 80%;
+}
+
+.container .top-part .search input:focus {
+  color: #000;
+}
+
+.container .top-part .search button {
+  position: absolute;
+  border: none;
+  background-color: #fff;
+  font-size: 18px;
+  right: 5px;
+  top: 10px;
   cursor: pointer;
+}
+
+.container .top-part .cart {
+  width: 15%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+/* MIDDLE PART */
+.container .middle-part {
+  display: flex;
+  margin-top: 100px;
+}
+
+.container .middle-part .features {
+  width: 15%;
+  align-self: flex-end;
+}
+
+.container .middle-part .features ul {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  text-transform: uppercase;
+  list-style-type: none;
+  border-left: 1px solid #e7f0f2;
+  padding-left: 25px;
+}
+
+.container .middle-part .features ul li {
+  margin-top: 40px;
+  cursor: pointer;
+}
+
+.container .middle-part .features ul li.top-list {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.container .middle-part .features ul li.active {
+  font-weight: 900;
+}
+
+.container .middle-part .product-list {
+  width: 70%;
+}
+
+.container .middle-part .product-list .products {
+  display: none;
+}
+
+.container .middle-part .product-list .products.active {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 60px;
+}
+
+.container .middle-part .product-list .products.active a {
   text-decoration: none;
   color: #000;
 }
 
-.container .right-side .item-name {
-  margin-top: 60px;
-  font-family: 'Roboto', sans-serif;
-  color: #363a41;
-}
-
-.container .right-side .item-name .item-color {
-  font-size: 40px;
-  font-weight: 300;
-}
-
-.container .right-side .item-name .item-type {
-  font-size: 40px;
-  font-weight: 900;
-}
-
-.container .right-side .item-price {
-  margin-top: 40px;
-}
-
-.container .right-side .item-price .current-price {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 900;
-  font-size: 35px;
-  color: #363a41;
-}
-
-.container .right-side .item-price .original-price {
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  color: #c3dee4;
-  text-decoration: line-through;
-}
-
-.container .right-side .item-description {
-  margin-top: 50px;
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: 500;
-  color: rgba(0, 0, 0, 0.3);
-  font-size: 18px;
-  width: 70%;
-}
-
-.container .right-side .item-description .short-description {
-}
-
-.container .right-side .item-description .long-description {
-  margin-top: 40px;
-}
-
-.container .right-side .size-selection {
-  margin-top: 50px;
-}
-
-.container .right-side .size-selection label {
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: 500;
-  color: rgba(0, 0, 0, 0.55);
-}
-
-.container .right-side .size-selection #size {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 900;
-  opacity: 0.85;
-  font-size: 30px;
-  border: none;
-}
-
-.container .right-side .cart-section {
+.container .middle-part .product-list .products.active .product {
   display: flex;
-  justify-content: space-between;
-  height: 100%;
-  margin-top: 60px;
-  font-family: 'Ubuntu', sans-serif;
-}
-
-.container .right-side .cart-section .cart-btn {
-  align-self: flex-end;
-  background-color: #000;
-  color: #fff;
-  border: none;
-  padding: 20px 45px;
-  font-size: 14px;
-  text-transform: uppercase;
+  align-items: flex-end;
+  background-color: rgba(231, 240, 242, 0.3);
+  height: 200px;
+  width: 300px;
   cursor: pointer;
 }
 
-.container .right-side .cart-section .advertisement {
+.container .middle-part .product-list .products.product2 .product {
+  background-color: rgba(231, 240, 242, 1);
+}
+
+.container .middle-part .product-list .products.active .product .description {
+  margin: 0 0 25px 20px;
+  font-family: 'Ubuntu', sans-serif;
+  text-transform: uppercase;
   font-weight: 500;
-  color: rgba(0, 0, 0, 0.55);
-  text-align: right;
+}
+
+.container
+  .middle-part
+  .product-list
+  .products.active
+  .product
+  .description
+  .title {
   font-size: 20px;
+  font-weight: 900;
+}
+
+.container
+  .middle-part
+  .product-list
+  .products.active
+  .product
+  .description
+  .category {
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.container .middle-part .filters {
+  width: 15%;
+}
+
+.container .middle-part .filters ul {
+  float: right;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  text-transform: uppercase;
+  list-style-type: none;
+  border-right: 1px solid #e7f0f2;
+  padding-right: 25px;
+}
+
+.container .middle-part .filters ul li {
+  margin-bottom: 40px;
+  cursor: pointer;
+}
+
+.container .middle-part .filters ul li.active {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+}
+
+/* BOTTOM PART */
+.container .bottom-part {
+  justify-self: center;
   align-self: center;
+  margin-top: 100px;
+  border-top: 1px solid #e7f0f2;
+  padding: 10px 40px 0 40px;
+}
+
+.container .bottom-part ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.container .bottom-part ul li {
+  display: inline-block;
+  margin: 0 15px;
+  color: #e7f0f2;
+  font-weight: 900;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.container .bottom-part ul .product-navigation.active {
+  color: #000;
 }
