--- a/src/Views/product/index.css
+++ b/src/Views/product/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&family=Ubuntu:wght@300;400;500;700&display=swap');
 
-body {
+.container {
   margin: 0;
   padding: 0;
   background: linear-gradient(
@@ -23,30 +23,30 @@ select:focus {
   cursor: pointer;
 }
 
-.container {
+.container-inside {
   display: flex;
   padding: 100px 120px 100px 150px;
 }
 
 /* LEFT SIDE */
-.container .left-side {
+.container-inside .left-side {
   min-width: 50%;
 }
 
-.container .left-side .image {
+.container-inside .left-side .image {
   position: relative;
 }
 
-.container .left-side .image img {
+.container-inside .left-side .image img {
   width: 100%;
 }
 
-.container .left-side .image .navigation {
+.container-inside .left-side .image .navigation {
   position: absolute;
   bottom: -5px;
 }
 
-.container .left-side .image .navigation .arrow-btn {
+.container-inside .left-side .image .navigation .arrow-btn {
   width: 60px;
   height: 70px;
   margin-right: 15px;
@@ -58,13 +58,13 @@ select:focus {
 }
 
 /* RIGHT SIDE */
-.container .right-side {
+.container-inside .right-side {
   margin-top: 50px;
   display: flex;
   flex-direction: column;
 }
 
-.container .right-side a {
+.container-inside .right-side a {
   align-self: flex-end;
   width: 10%;
   font-family: 'Roboto', sans-serif;
@@ -78,34 +78,34 @@ select:focus {
   color: #000;
 }
 
-.container .right-side .item-name {
+.container-inside .right-side .item-name {
   margin-top: 60px;
   font-family: 'Roboto', sans-serif;
   color: #363a41;
 }
 
-.container .right-side .item-name .item-color {
+.container-inside .right-side .item-name .item-color {
   font-size: 40px;
   font-weight: 300;
 }
 
-.container .right-side .item-name .item-type {
+.container-inside .right-side .item-name .item-type {
   font-size: 40px;
   font-weight: 900;
 }
 
-.container .right-side .item-price {
+.container-inside .right-side .item-price {
   margin-top: 40px;
 }
 
-.container .right-side .item-price .current-price {
+.container-inside .right-side .item-price .current-price {
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
   font-size: 35px;
   color: #363a41;
 }
 
-.container .right-side .item-price .original-price {
+.container-inside .right-side .item-price .original-price {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -113,7 +113,7 @@ select:focus {
   text-decoration: line-through;
 }
 
-.container .right-side .item-description {
+.container-inside .right-side .item-description {
   margin-top: 50px;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
@@ -122,24 +122,24 @@ select:focus {
   width: 70%;
 }
 
-.container .right-side .item-description .short-description {
+.container-inside .right-side .item-description .short-description {
 }
 
-.container .right-side .item-description .long-description {
+.container-inside .right-side .item-description .long-description {
   margin-top: 40px;
 }
 
-.container .right-side .size-selection {
+.container-inside .right-side .size-selection {
   margin-top: 50px;
 }
 
-.container .right-side .size-selection label {
+.container-inside .right-side .size-selection label {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 500;
   color: rgba(0, 0, 0, 0.55);
 }
 
-.container .right-side .size-selection #size {
+.container-inside .right-side .size-selection #size {
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
   opacity: 0.85;
@@ -147,7 +147,7 @@ select:focus {
   border: none;
 }
 
-.container .right-side .cart-section {
+.container-inside .right-side .cart-section {
   display: flex;
   justify-content: space-between;
   height: 100%;
@@ -155,7 +155,7 @@ select:focus {
   font-family: 'Ubuntu', sans-serif;
 }
 
-.container .right-side .cart-section .cart-btn {
+.container-inside .right-side .cart-section .cart-btn {
   align-self: flex-end;
   background-color: #000;
   color: #fff;
@@ -166,7 +166,7 @@ select:focus {
   cursor: pointer;
 }
 
-.container .right-side .cart-section .advertisement {
+.container-inside .right-side .cart-section .advertisement {
   font-weight: 500;
   color: rgba(0, 0, 0, 0.55);
   text-align: right;
