--- a/src/Views/product/index.css
+++ b/src/Views/product/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&family=Ubuntu:wght@300;400;500;700&display=swap');
 
-.container {
+.container-product {
   margin: 0;
   padding: 0;
   background: linear-gradient(
