--- a/src/Views/shop/index.css
+++ b/src/Views/shop/index.css
@@ -125,10 +125,14 @@ select:focus {
 }
 
 .container-shop .middle-part .product-list .products .product .description {
-  margin: 0 0 25px 20px;
+  width: 70%;
+  margin: 0 0 10px 10px;
+  padding: 5px 0 5px 5px;
   font-family: 'Ubuntu', sans-serif;
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 300;
+  color: #fff;
+  background-color: rgba(119, 119, 119, 0.7);
 }
 
 .container-shop
@@ -139,7 +143,6 @@ select:focus {
   .description
   .title {
   font-size: 20px;
-  font-weight: 900;
 }
 
 .container-shop
