--- a/src/Views/shop/index.css
+++ b/src/Views/shop/index.css
@@ -74,6 +74,7 @@ select:focus {
 .container-shop .middle-part {
   display: flex;
   margin-top: 100px;
+  min-height: 720px;
 }
 
 .container-shop .middle-part .features {
@@ -142,7 +143,7 @@ select:focus {
   .product
   .description
   .title {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .container-shop
@@ -152,7 +153,7 @@ select:focus {
   .product
   .description
   .category {
-  font-size: 14px;
+  font-size: 11px;
   margin-top: 5px;
 }
 
