fixed some of product page and connect to redux

--- a/src/Views/product/index.css
+++ b/src/Views/product/index.css
@@ -35,6 +35,7 @@ select:focus {
 
 .container-inside .left-side .image {
   position: relative;
+  width: 80%;
 }
 
 .container-inside .left-side .image img {
