--- a/src/Views/product/index.css
+++ b/src/Views/product/index.css
@@ -64,7 +64,7 @@ select:focus {
 
 .container-inside .right-side a {
   align-self: flex-end;
-  width: 10%;
+  min-width: 12%;
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
   text-transform: uppercase;
@@ -118,9 +118,6 @@ select:focus {
   color: rgba(0, 0, 0, 0.3);
   font-size: 18px;
   width: 70%;
-}
-
-.container-inside .right-side .item-description .short-description {
 }
 
 .container-inside .right-side .item-description .long-description {
