--- a/src/Views/shop/index.css
+++ b/src/Views/shop/index.css
@@ -112,9 +112,17 @@ select:focus {
 
 .container-shop .middle-part .product-list .products {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  row-gap: 60px;
+  min-height: 100%;
+}
+
+.container-shop .middle-part .product-list .products .empty-product {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 720px;
+  font-size: 40px;
+  color: #999;
 }
 
 .container-shop .middle-part .product-list .products .product {
