--- a/src/Views/product/index.css
+++ b/src/Views/product/index.css
@@ -44,13 +44,12 @@ select:focus {
   bottom: -5px;
 }
 
-.container-inside .left-side .image .navigation .arrow-btn {
-  width: 60px;
-  height: 70px;
+.container-inside .left-side .image .navigation a.arrow-btn {
+  padding: 5px 15px;
   margin-right: 15px;
   background-color: #000;
   color: #fff;
-  font-size: 20px;
+  font-size: 50px;
   border: none;
   cursor: pointer;
 }
