--- a/src/Views/cartList/index.css
+++ b/src/Views/cartList/index.css
@@ -70,6 +70,23 @@
   width: 10%;
 }
 
+.cart-list .total-payment {
+  display: flex;
+  font-size: 25px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.cart-list .total-payment .total1 {
+  width: 50%;
+  text-align: end;
+}
+
+.cart-list .total-payment .total2 {
+  width: 50%;
+  padding-left: 20px;
+}
+
 .cart-list .button {
   margin: auto;
   margin-top: 50px;
