--- a/src/Views/payment/index.css
+++ b/src/Views/payment/index.css
@@ -90,3 +90,20 @@
   width: 30%;
   text-align: end;
 }
+
+.payment .total-payment {
+  display: flex;
+  font-size: 30px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.payment .total-payment .total {
+  width: 50%;
+  text-align: end;
+}
+
+.payment .total-payment .amount {
+  width: 50%;
+  padding-left: 20px;
+}
