--- a/src/Views/registerUser/index.css
+++ b/src/Views/registerUser/index.css
@@ -14,3 +14,13 @@
   border-radius: 5px;
   padding: 30px 20px;
 }
+
+@media (max-width: 900px) {
+  .form {
+    width: 90%;
+  }
+
+  .form .btn {
+    margin-top: 1em;
+  }
+}
