--- a/src/Views/payment/index.css
+++ b/src/Views/payment/index.css
@@ -107,3 +107,21 @@
   width: 50%;
   padding-left: 20px;
 }
+
+@media (max-width: 900px) {
+  .payment {
+    width: 90%;
+  }
+
+  .order-headers > div {
+    text-align: center;
+  }
+
+  .payment .payment-method .payment-source {
+    width: 100%;
+  }
+
+  .payment .payment-btn {
+    width: 100%;
+  }
+}
